Fixing box alignment issues

--- a/src/components/box/style.css
+++ b/src/components/box/style.css
@@ -49,7 +49,7 @@
 }
 
 @media(max-width: 700px) {
-    .projects .container .box {
+    .projects .container .box .boxcontent {
         flex-direction: column-reverse;
         justify-content: center;
         align-items: center;
